--- a/pub-services/package.json
+++ b/pub-services/package.json
@@ -5,16 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./services/**/*.spec.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint . --ext .js"
   },
   "author": "celikbas.ahmet@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
     "moment": "^2.18.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb-base": "^12.0.1",
+    "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.5.3"
   }
 }
